Cilist/templates/SerpisFE.yaml
apiVersion: v1
kind: Service
metadata:
  name: serpisfe
spec:
  selector:
    app: deployfe
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
