Cilist/templates/IngressFE.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-gateway
spec:
  rules:
  - host: lp.pisang.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lpserpis
            port:
              number: 80
  - host: cilist.pisang.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: serpisfe
            port:
              number: 80
  - host: whoami.pisang.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
